# OpenID-provider

./: .gitignore
.github/workflows/: main.yml
auth-service/: .env  .env-dist  .env-prod  Makefile  alembic.ini  docker-compose-local-dev.yml  docker-compose.yml  local-docker-compose.yml  nginx.conf
auth-service/api/: .env-dist  .env-prod  Dockerfile.webapi  Makefile  pyproject.toml
auth-service/auth_service/: Dockerfile  Makefile  pyproject.toml
auth-service/investments_src/: Dockerfile  Makefile  base_banki_ru_gateway.py  bonds_gateway.py  currency_gateway.py  di_container.py  gold_gateway.py  investments_service.py  main.py  pyproject.toml  res.json  share_gateway.py
auth-service/nginx/: Dockerfile
auth-service/notification/: .env  .env-prod  app.py  config.py  email_notification.py
auth-service/prometheus/: prometheus.yml
auth-service/vector/: vector.toml
profile-service/: pyproject.toml
profile-service/api/src/core/db/: db_types.py
profile-service/api/src/core/di/providers/: handlers.py  presentation.py  readers.py  repositories.py  services.py
profile-service/api/src/domain/entities/client/: model.py
profile-service/api/src/domain/entities/user/: access_fields.py  model.py  value_objects.py
profile-service/api/src/domain/exceptions/: user_vo.py
profile-service/api/src/infrastructure/: http_id_provider.py
profile-service/api/src/infrastructure/db/models/: __init__.py  secondary.py
profile-service/api/src/presentation/web_api/: http_id_provider.py
profile-service/api/src/presentation/web_api/client/: client_router.py
(+417 files in other folders)
