[tool.poetry]
name = "profile-service"
version = "0.1.0"
description = ""
authors = ["CoSm1C AvEnGeR <zhora.zhilin.06@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["asyncio"], version = "^0.5.33"}
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
pyjwt = "^2.10.1"
dishka = "^1.4.2"
boto3 = "^1.35.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
